fix: primer columna visible tras hacer scroll y hay highlight

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -69,7 +69,15 @@ textarea {
   color: var(--md-sys-color-on-surface);
 }
 
-.crosshair-table tbody tr:hover > * {
+.crosshair-table td.sticky-col,
+.crosshair-table th.sticky-col {
+  position: sticky;
+  left: 0;
+  background-color: var(--md-sys-color-background);
+  z-index: 1;
+}
+
+.crosshair-table tbody tr:hover > *:not(.sticky-col) {
   background-color: rgba(144, 202, 249, 0.2);
 }
 
